<resources>
    <string name="app_name">Confinance</string>
    <string name="control_your_life">Controle sua vida financeira</string>
    <string name="learning_body1_string">Um aplicativo feito para você controlar facilmente as suas economias.</string>
    <string name="go_forward">Avançar</string>
    <string name="skip_to_dashboard">Pular para o painel</string>
    <string name="create_wallets">Crie carteiras</string>
    <string name="learning_body2_string">Cadastre seus cartões ou contas de banco para monitorá-las quando quiser!</string>
    <string name="start">Começar</string>
    <string name="your_total_balance">Seu saldo total</string>
    <string name="income">Rendimento</string>
    <string name="expenses">Despesas</string>
    <string name="your_wallets">Suas carteiras</string>
    <string name="transactions">Transações</string>
    <string name="create_account_or_card">Criar conta bancária ou cartão</string>
    <string name="create_bank_account">Criar conta</string>
    <string name="create_credit_card">Criar cartão</string>
    <string name="account_information">Informações da conta</string>
    <string name="name">Nome</string>
    <string name="bank">Banco</string>
    <string name="bank_type">Tipo de banco</string>
    <string name="checking_account">Conta Corrente</string>
    <string name="savings_account">Conta Poupança</string>
    <string name="credit_card">Cartão de Crédito</string>
    <string name="additional_information">Informações adicionais</string>
    <string name="initial_balance">Saldo inicial</string>
    <string name="card_information">Informações do cartão</string>
    <string name="limit">Limite</string>
    <string name="due_date">Data de vencimento</string>
    <string name="date">%d/%d</string>
    <string name="amount">%s %.2f</string>
    <string name="wallet_details">Detalhes da carteira</string>
    <string name="delete">Deletar</string>
    <string name="informations">Informações</string>
    <string name="edit_informations">Editar informações</string>
    <string name="name_account">Nome da Conta</string>
    <string name="institution_name">Nome da Instituição</string>
    <string name="type_account">Tipo de Conta</string>
    <string name="current_invoice">Fatura atual</string>
    <string name="value">Valor</string>
    <string name="deposit">Depósito</string>
    <string name="to_deposit">Depositar</string>
    <string name="cancel">Cancelar</string>
    <string name="draw_out">Saque</string>
    <string name="to_draw_out">Sacar</string>
    <string name="deposit_or_draw_out">Depositar ou sacar</string>
    <string name="new_buy_or_invoice_payment">Nova compra ou pagar fatura</string>
    <string name="new_buy">Nova compra</string>
    <string name="invoice_payment">Pagamento da fatura</string>
    <string name="to_buy">Comprar</string>
    <string name="pay_invoice">Pagar fatura</string>
    <string name="to_pay">Pagar</string>
    <string name="date_time">%d.%d.%d | %d:%d</string>
    <string name="save_bank_account">Salvar conta</string>
    <string name="save_credit_card">Salvar cartão</string>
</resources>