<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.BankAccountDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/wallet_details_menu"
                app:navigationIcon="@drawable/ic_baseline_clear_24"
                app:title="@string/wallet_details"
                app:titleTextAppearance="?attr/textAppearanceHeadline6"
                app:titleTextColor="@color/black_text" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/invoice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/current_invoice"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

        <TextView
            android:id="@+id/invoice_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_slab_medium"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invoice_text"
            tools:text="R$ 7.500,00" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/informations"
            app:layout_constraintTop_toBottomOf="@+id/invoice_value" />

        <TextView
            android:id="@+id/informations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/informations"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <ImageButton
            android:id="@+id/edit_informations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/edit_informations"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="@id/informations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/informations"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/group_name_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/informations">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_account"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:id="@+id/name_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="Cartão Inter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_name_institution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/informations">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/institution_name"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:id="@+id/name_institution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="Banco Inter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_name_account">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:id="@+id/limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="R$ 5.000,00" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/group_name_account">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextView
                android:id="@+id/due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textAppearance="?attr/textAppearanceBody1"
                tools:text="15/04/2023" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/group_limit" />

        <TextView
            android:id="@+id/transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/transactions"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactions_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactions"
            tools:itemCount="5"
            tools:listitem="@layout/transaction_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/new_buy_or_invoice_payment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/new_buy"
            android:visibility="gone"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/fab_transaction"
            app:layout_constraintEnd_toEndOf="@id/fab_transaction"
            app:layout_constraintStart_toStartOf="@id/fab_transaction"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_invoice_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/invoice_payment"
            android:layout_marginBottom="4dp"
            app:fabSize="mini"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/fab_new_buy"
            app:layout_constraintEnd_toEndOf="@id/fab_new_buy"
            app:layout_constraintStart_toStartOf="@id/fab_new_buy"
            app:srcCompat="@drawable/ic_baseline_attach_money_24"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
