<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_clear_24"
                app:title="@string/create_bank_account"
                app:titleTextAppearance="?attr/textAppearanceHeadline6"
                app:titleTextColor="@color/black_text" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/account_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/account_information"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@id/account_information">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/black_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/bank"
            app:layout_constraintTop_toBottomOf="@id/input_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_bank_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/black_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_bank_type"
            style="@style/Widget.Confinance.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/bank_type"
            app:endIconTint="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@id/input_bank">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/input_bank_type_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/black_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/additional_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/additional_information"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_bank_type" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/initial_balance"
            app:layout_constraintTop_toBottomOf="@id/additional_information">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_balance_edit_text"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/black_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_bank_account"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
